@@ -13,6 +13,7 @@ Changes 0.9.2 ->
   send messages to them due to port mismatch when looking up the peer.
 * Added note about restoring hop-by-hop-identifier when forwarding answers
   with NodeManager.forwardAnswer()
+* Added example relay to show per-message state handling in NodeManager.
 
 Changes 0.9.1 -> 0.9.2
 * Reset TCP connection when non-diameter traffic is encountered (RFC3588
